--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
     
 </head>
-<body>
+<body style="max-width: 98vw;">
 <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -122,16 +122,16 @@
   </div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid ">
   <!-- corosel -->
-  <div class = "row ">
+  <div class = "row">
     <div class ="col-md-12">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="">
           <br><br><br><br>
         </div>
         
-        <div class="carousel-inner" style="height: 60vh;">
+        <div class="carousel-inner" style="height: 60vh">
           <div class="carousel-item active">
             <img src="Images/corosol/4.jpg" alt="...">
           </div>
