--- a/shoes.html
+++ b/shoes.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Mens wear</title>
 </head>
 <body>
@@ -54,9 +55,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s1.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 100</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -65,9 +68,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s2.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 500</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -76,9 +81,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s3.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 500</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -87,9 +94,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s4.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 2000</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -98,9 +107,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s5.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 600</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -109,9 +120,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s6.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 600</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -120,9 +133,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s7.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 600</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -131,9 +146,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s8.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 600</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -142,9 +159,11 @@
         <div class="card" >
           <img src="Images/shoeCollection/s9.jpg" class="card-img-top" alt="...">
           <div class="card-body ">
-            <p class="font-weight-bold m-0">Shirt</p>
+            <p class="font-weight-bold m-0">Shooes</p>
             <p class="">RS 600</p>
-            <div class="btn btn-dark">Buy</div>
+            <a href="delivery.html">
+              <div class="btn btn-dark" onclick="buyProduct('Shooes', '100', '1', 'XL', 'Images/shoeCollection/s1.jpg')">Buy</div>
+            </a>
           </div>
         </div>
       </div>
@@ -152,6 +171,18 @@
     </div>
   </div>
 
+  <script>
+
+    function buyProduct(name, price, quant, size, img) {
+      confirm("Do you want to buy " + name);
+      sessionStorage.setItem("pName", name)
+      sessionStorage.setItem("pDesc", "Nice Denim shirst")
+      sessionStorage.setItem("price", price)
+      sessionStorage.setItem("quantity", quant)
+      sessionStorage.setItem("size", size)
+      sessionStorage.setItem("img", img)
+    }
+  </script>
 
 
 
