--- a/delivery.html
+++ b/delivery.html
@@ -239,8 +239,11 @@
         toast("please enter Address");
         document.getElementById("add").focus();
       }
-      confirm("Do you want to confirm order")
-      window.location.replace("confirm.html")
+      else {
+        confirm("Do you want to confirm order")
+        window.location.replace("confirm.html")
+      }
+      
     }
   </script>
 
